# server/api/openapi-with-docs.json
@@ -207,6 +207,38 @@
         }
       }
     },
+    "/api/auth/UpdatePassword": {
+      "put": {
+        "tags": [
+          "Auth"
+        ],
+        "operationId": "Auth_UpdatePassword",
+        "requestBody": {
+          "x-name": "dto",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChangePasswordRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/board/GetBoards": {
       "get": {
         "tags": [
@@ -639,6 +671,29 @@
             "maxLength": 8,
             "minLength": 8,
             "pattern": "^\\d{8}$"
+          }
+        }
+      },
+      "ChangePasswordRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "userID",
+          "previousPassword",
+          "newPassword"
+        ],
+        "properties": {
+          "userID": {
+            "type": "string",
+            "minLength": 1
+          },
+          "previousPassword": {
+            "type": "string",
+            "minLength": 6
+          },
+          "newPassword": {
+            "type": "string",
+            "minLength": 6
           }
         }
       },
