# server/service/AuthService.cs
@@ -95,7 +95,7 @@ public class AuthService(MyDbContext dbContext, IPasswordHasher<User> passwordHa
         if (dto.NewPassword.Equals(dto.PreviousPassword)) throw new ValidationException("Du kan ikke fucking bruge det samme password som dit fede fucking forrige password, idiot, så lad være med at opdatere dit fucking password.");
 
         var user = dbContext.Users.First(u => u.Id == dto.userID);
-        if (passwordHasher.VerifyHashedPassword(user, user.PasswordHash, dto.NewPassword) == PasswordVerificationResult.Failed) throw new ValidationException("Dit nuværende password er forkert!");
+        if (passwordHasher.VerifyHashedPassword(user, user.PasswordHash, dto.PreviousPassword) == PasswordVerificationResult.Failed) throw new ValidationException("Dit nuværende password er forkert!");
         user.PasswordHash = passwordHasher.HashPassword(user, dto.NewPassword);
         await dbContext.SaveChangesAsync();
         return true;
